# personal-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  debug_yt.py  deploy.ps1  deploy.sh  docker-compose.yml  export_cookies.py  pyproject.toml
scripts/: deploy-to-server.ps1  server-status.ps1  sync-from-server.ps1
services/arxiv/: Dockerfile  README.md  pyproject.toml
services/arxiv/arxiv_worker/: client.py  main.py  paper_analyzer.py
services/arxiv/tests/: reanalyze_from_db.py  test_e2e_arxiv.py
services/fb/: Dockerfile  README.md  pyproject.toml
services/fb/fb_worker/: __init__.py  crawler.py  deal_analyzer.py  debug_fb.py  main.py
services/fb/tests/: test_e2e_fb.py
services/youtube/: Dockerfile  README.md  pyproject.toml
services/youtube/tests/: test_e2e_yt.py
services/youtube/yt_worker/: auth.py  crawler.py  main.py
shared/: README.md  pyproject.toml
shared/shared/: __init__.py  config.py  llm_json.py  state.py  writer.py
shared/shared/prompts/: __init__.py  obsidian_skill.py
shared/shared/storage/: __init__.py  obsidian.py  zvec_store.py
src/: config.py  main.py
src/graph/: builder.py  state.py
src/graph/nodes/: arxiv_collector.py  fb_marketplace.py  obsidian_writer.py  vectorstore.py  youtube.py
src/prompts/: __init__.py  obsidian_skill.py
src/research/: arxiv_client.py  deal_analyzer.py  paper_analyzer.py
src/scrapers/: browser_profiles.py  fb_crawler.py  youtube_auth.py  yt_crawler.py
src/storage/: obsidian.py  zvec_store.py
tests/: test_arxiv.py  test_graph.py  test_scrapers.py
vault/Agent-Research/Papers/: A Framework for Assessing AI Agent Decisions and Outcomes in AutoML Pipelines.md  AMA-Bench Evaluating Long-Horizon Memory for Agentic Applications.md  AREG Adversarial Resource Extraction Game for Evaluating Persuasion and Resistan.md  AgentDropoutV2 Optimizing Information Flow in Multi-Agent Systems via Test-Time .md  An Expert Schema for Evaluating Large Language Model Errors in Scholarly Questio.md  Anatomy of Agentic Memory Taxonomy and Empirical Analysis of Evaluation and Syst.md  ArabicNumBench Evaluating Arabic Number Reading in Large Language Models.md  Assessing Deanonymization Risks with Stylometry-Assisted LLM Agent.md  BURMESE-SAN Burmese NLP Benchmark for Evaluating Large Language Models.md  Benchmark Test-Time Scaling of General LLM Agents.md  Beyond Accuracy A Cognitive Load Framework for Mapping the Capability Boundaries.md  CXReasonAgent Evidence-Grounded Diagnostic Reasoning Agent for Chest X-rays.md  Case-Aware LLM-as-a-Judge Evaluation for Enterprise-Scale RAG Systems.md  CoLT Reasoning with Chain of Latent Tool Calls.md  Counterfactual Fairness Evaluation of LLM-Based Contact Center Agent Quality Ass.md  CxMP A Linguistic Minimal-Pair Benchmark for Evaluating Constructional Understan.md  D-CORE Incentivizing Task Decomposition in Large Reasoning Models for Complex To.md  DREAM Deep Research Evaluation with Agentic Metrics.md  DeepPresenter Environment-Grounded Reflection for Agentic Presentation Generatio.md  ESAA Event Sourcing for Autonomous Agents in LLM-Based Software Engineering.md  EvalSense A Framework for Domain-Specific LLM (Meta-)Evaluation.md  Evaluating Monolingual and Multilingual Large Language Models for Greek Question.md  Evaluating Proactive Risk Awareness of Large Language Models.md  Evaluating Stochasticity in Deep Research Agents.md  Evaluating the Usage of African-American Vernacular English in Large Language Mo.md  Exploratory Memory-Augmented LLM Agent via Hybrid On- and Off-Policy Optimizatio.md  Extending Czech Aspect-Based Sentiment Analysis with Opinion Terms Dataset and L.md  FactGuard Agentic Video Misinformation Detection via Reinforcement Learning.md  From Failure to Mastery Generating Hard Samples for Tool-use Agents.md  From Performance to Purpose A Sociotechnical Taxonomy for Evaluating Large Langu.md  From Self-Evolving Synthetic Data to Verifiable-Reward RL Post-Training Multi-tu.md  General Agent Evaluation.md  Hierarchy-of-Groups Policy Optimization for Long-Horizon Agentic Tasks.md  Implicit Intelligence -- Evaluating Agents on What Users Don't Say.md  IndicEval A Bilingual Indian Educational Evaluation Framework for Large Language.md  KGHaluBench A Knowledge Graph-Based Hallucination Benchmark for Evaluating the B.md  Learning-based Multi-agent Race Strategies in Formula 1.md  Linguistic and Argument Diversity in Synthetic Data for Function-Calling Agents.md  Lost in Execution On the Multilingual Robustness of Tool Calling in Large Langua.md  Luna-2 Scalable Single-Token Evaluation with Small Language Models.md  (+37 more)
