[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project]
name = "personal-agent"
version = "0.1.0"
description = "Autonomous AI agent for web scraping (FB Marketplace, YouTube), Arxiv research, and Obsidian note-taking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # LLM & Agent orchestration
    "langgraph>=0.4,<1.0",
    "langchain-openai>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    # Embeddings (OpenAI API)
    "openai>=1.60,<2.0",

    # Web scraping
    "crawl4ai>=0.8,<1.0",
    "playwright>=1.49,<2.0",

    # Research
    "arxiv>=2.1,<3.0",

    # Vector store (PostgreSQL + pgvector)
    "psycopg[binary]>=3.2,<4.0",
    "pgvector>=0.3,<1.0",

    # Scheduling
    "apscheduler>=3.10,<4.0",

    # Configuration & utilities
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "loguru>=0.7,<1.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
personal-agent = "src.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
