[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared"
version = "0.1.0"
description = "Shared library for personal-agent microservices"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Configuration
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",

    # LLM (embeddings + idea extraction)
    "openai>=1.60,<2.0",

    # Vector store
    "psycopg[binary]>=3.2,<4.0",
    "pgvector>=0.3,<1.0",
    "numpy>=1.26,<2.0",

    # Utilities
    "loguru>=0.7,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]
