[project]
name = "arxiv-worker"
version = "0.1.0"
description = "Arxiv paper collector and analyzer"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "arxiv>=2.4.1",
    "apscheduler>=3.11.2,<4",
    "google-genai>=1.65",
    "httpx>=0.28.1",
]

[tool.uv.sources]
shared = { path = "../../shared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
