[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fb-worker"
version = "0.1.0"
description = "FB Marketplace scraper + deal detector microservice"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "shared",

    # Web scraping (requires Playwright/Chromium)
    "crawl4ai>=0.8,<1.0",
    "playwright>=1.49,<2.0",

    # Scheduling
    "apscheduler>=3.10,<4.0",
]

[tool.uv.sources]
shared = { path = "../../shared" }

[tool.hatch.build.targets.wheel]
packages = ["fb_worker"]
